# anthropic-learning

./: pyproject.toml  pyrightconfig.json
notebooks/: 001_prompt_evals.ipynb  001_prompt_evals_complete.ipynb  001_prompt_evals_fns.ipynb  001_prompt_evals_grader.ipynb  001_tools.ipynb  003_tool_streaming.ipynb  02_making_a_request copy.ipynb  03_multi_turn_conversations.ipynb  04_chat_exercise.ipynb  05_system_prompts.ipynb  06_system_prompts_exercise.ipynb  07_response_streaming.ipynb  08_structured_data_exercise.ipynb  dataset.json
notebooks/extended thinking/: 001_thinking.ipynb  001_thinking_complete.ipynb  002_images.ipynb
notebooks/rag and agentic search/: 001_chunking.ipynb  002_embeddings.ipynb  003_vectordb.ipynb  004_bm25.ipynb  005_hybrid.ipynb
