[project]
name = "base-notebook"
version = "0.1.0"

dependencies = [
    # jupyter / notebook
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "python-dotenv",
    # science / math
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    # AI / ML
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "nbqa",
    "nbstripout",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401"]

[tool.ruff]
exclude = ["notebooks/001_prompt_evals*.ipynb", "notebooks/001_prompting.ipynb", "notebooks/002_prompting_completed.ipynb", "notebooks/001_tools.ipynb"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.pyright]
exclude = ["notebooks/001_prompting.ipynb", "notebooks/002_prompting_completed.ipynb", "notebooks/001_tools.ipynb"]
